atualizaçao para a master

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     
     <!-- Styleswitcher
 ================================================== -->
-        <div class="colors-switcher">
+        <!--<div class="colors-switcher">
             <a id="show-panel" class="hide-panel"><i class="fa fa-tint"></i></a>        
                 <ul class="colors-list">
                     <li><a title="Light Red" onClick="setActiveStyleSheet('light-red'); return false;" class="light-red"></a></li>
@@ -76,7 +76,7 @@
                     
                 </ul>
 
-        </div>  
+        </div>-->
 <!-- Styleswitcher End
 ================================================== -->
 
